# FFmpegDemo

./: README.md
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/source/: ffmpeg_version.cpp
app/src/main/java/com/luohb/ffmpeg/: AudioTrackerManager.java  MainActivity.java  RecorderManager.java  XPlay.java
app/src/main/java/com/luohb/ffmpeg/pcm/: PcmPlayer.java  PcmRecord.java
app/src/main/java/com/luohb/ffmpeg/ui/activity/: CameraActivity.java  FFmpegAPIActivity.java  FFmpegInfoActivity.java  MediaInfoActivity.java  PcmActivity.java
app/src/main/java/com/luohb/ffmpeg/ui/view/: XPlay.java
app/src/main/java/com/luohb/ffmpeg/util/: FileUtils.java
app/src/main/res/layout/: activity_ffmpeg_api.xml  activity_ffmpeg_info.xml  activity_main.xml  activity_media_info.xml  activity_pcm.xml
gradle/wrapper/: gradle-wrapper.properties
